--- a/assets/index.html
+++ b/assets/index.html
@@ -106,6 +106,37 @@
             </div>
         </div> 
     
+        <footer class="footer-02">
+        
+            <div class="col-md-3 py-md-5 py-4 aside-stretch-right pl-lg-5">
+                <h2 class="footer-heading footer-heading-white">Contact us</h2>
+                    <form action="#" class="contact-form">
+
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Your Name">
+                        </div>
+
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Your Email">
+                        </div>
+
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Subject">
+                        </div>
+
+                        <div class="form-group">
+                            <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Message"></textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <button type="submit" class="form-control submit px-3">Send</button>
+                        </div>
+
+                    </form>
+            </div>
+
+        </footer>
+
         </article>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
